@@ -46,6 +46,7 @@
 - fix interface address null check.
 - dont prode rdma mounts.
 - wait for master map to be available at start.
+- add master read wait option.
 
 25/07/2012 autofs-5.0.7
 =======================
